[package]
name = "asyncio-utils"
version = "0.4.4"
edition = "2021"
license = "Apache-2.0"
description = "Support limit,skip on AsyncRead traits"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
repository = "https://github.com/wushilin/asyncio-utils.git"

[dependencies]

tokio = { version = "1", features = ["full"] }
